buttonを青に変更

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,6 +2,9 @@
     body {
         background-color: skyblue;
     }
+    button{
+        color: blue;
+    }
     #minuteStr {
         color: #ff0000;
         font-size: 20px;
@@ -42,7 +45,7 @@
         position:absolute; top:10px; 
         left:10px; right:10px;
     }
-    
+
     #btnA {
         font-size: 20px;
         position:absolute; top:380px; left:2%; width:43%; height:60px; 
