buttonのフォントを変更

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,6 +4,8 @@
     }
     button{
         color: blue;
+        font-family: Times;
+       // border-radius: 20px;
     }
     #minuteStr {
         color: #ff0000;
