--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,7 +5,7 @@
     button{
         color: blue;
         font-family: Times;
-       // border-radius: 20px;
+        border-radius: 20px;
     }
     #minuteStr {
         color: #ff0000;
