--- a/www/css/style.css
+++ b/www/css/style.css
@@ -50,7 +50,9 @@
 
     #btnA {
         font-size: 20px;
-        position:absolute; top:380px; left:2%; width:43%; height:60px; 
+        position:absolute; top:380px; left:2%; width:43%; height:60px;
+        background-color: yellow; 
+        color: green;
     }
     
     #btnB {
