ボタンBとCの改善

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -59,11 +59,15 @@
     #btnB {
         font-size: 20px;
         position:absolute; top:380px; left:45%; width:25%; height:60px; 
+        background-color: #e5e7eb;
+        color: #111111;
     }
 
     #btnC {
-        font-size: 10px;
+        font-size: 20px;
         position:absolute; top:380px; left:70%; width:28%; height:60px; 
+        background-color: #eef2ff;
+        color: #1e3a8a;
     }
     
     #minute {
