--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,6 @@
 /**/
     body {
-        background-color: skyblue;
+        background-color: seagreen  ;
     }
     button{
         color: blue;
@@ -8,7 +8,7 @@
         border-radius: 20px;
     }
     #minuteStr {
-        color: #ff0000;
+        color:#111111;
         font-size: 20px;
         text-align: left;
         position:absolute; top:210px; 
@@ -16,7 +16,7 @@
     }
     
     #secondStr {
-        color: #ff0000;
+        color: #111111;
         font-size: 10px;
         text-align: left;
         position:absolute; top:250px; 
